@@ -17,6 +17,7 @@ MFEM_USE_MPI         = @MFEM_USE_MPI@
 MFEM_USE_METIS       = @MFEM_USE_METIS@
 MFEM_USE_METIS_5     = @MFEM_USE_METIS_5@
 MFEM_DEBUG           = @MFEM_DEBUG@
+MFEM_USE_EXCEPTIONS  = @MFEM_USE_EXCEPTIONS@
 MFEM_USE_GZSTREAM    = @MFEM_USE_GZSTREAM@
 MFEM_USE_LIBUNWIND   = @MFEM_USE_LIBUNWIND@
 MFEM_USE_LAPACK      = @MFEM_USE_LAPACK@
